--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,6 +1,6 @@
 ---
-title: "Portfolio item number 2"
-excerpt: "Short description of portfolio item number 2 <br/><img src='/images/500x300.png'>"
+title: "Portfolio this is html"
+excerpt: "Short description of portfolio item number 2 <br/><img src='/images/quadruped/logitech_attack_3.png'>"
 collection: portfolio
 ---
 
