--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,6 +1,6 @@
 ---
 title: "Portfolio this is html"
-excerpt: "Short description of portfolio item number 2 <br/><img src='/images/quadruped/logitech_attack_3.png'>"
+excerpt: "Short description of portfolio item number 2 <br/><img src='/images/quadruped/logitech_attack_3.jpg'>"
 collection: portfolio
 ---
 
